save local changes before pull